User, Test DAO.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,7 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${libs.JAVADB_DRIVER_LABEL.classpath}
+    ${libs.MySQL_JDBC_Driver_-_8.0.17.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
